# analytics

./: .gitignore  README.md  SQL.md  docker-compose.yaml  pyproject.toml  rdocker.sh
md/: CHINOOK.md  README.md  README_CC.md  README_CL.md  README_DESCRIPTION.md  README_VISUAL.md  SETUP.md  SQL.md  SQLBOOK.md  SQL_THEORY.md
services/airflow/config/: airflow.cfg
services/clickhouse/: Dockerfile
services/clickhouse/data/config/: config.xml  run.txt  users.xml
services/clickhouse/sql/: Liquor_Sales.sql  cars.sql  uk.sql
services/jupyter/: Dockerfile
services/jupyter/notebooks/: cars.ipynb  cars2_cc.ipynb  cars2_chdb.ipynb  cars2_db.ipynb  cars2_file.ipynb  cars3.ipynb  examples.ipynb  header.ipynb  liquor_clickhouse.ipynb
services/jupyter/notebooks/.ipynb_checkpoints/: chinook-checkpoint.ipynb
services/jupyter/notebooks/cl_wrapper/: connection.py  my_exceptions.py  sql.py
services/jupyter/notebooks/my_module/: my_describe.py  my_func.py  my_modules.py
services/jupyter/notebooks/my_modules/: my_modules.py
services/jupyter/notebooks/old/: Untitled.ipynb  cars.ipynb  cars2_db1_my.ipynb  test.ipynb
services/postgres/: sql.txt
services/postgres/init/: init-db-secure.sh
services/python/: create_readme.py  main.py  main2.py
services/python/modules/: db.py  totals.py
services/superset/: Dockerfile  superset_config.py
services/superset/Dockerfiles/: Dockerfile.celery_beat  Dockerfile.celery_worker  Dockerfile.superset
services/superset/celerybeat/: celerybeat-schedule
services/superset/config/: superset_config.py
sh/: convert.sh
